--- a/catalog.html
+++ b/catalog.html
@@ -5,43 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>КиноТрендОбыкновенный</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background: radial-gradient(circle at 20% 20%, #0b0017, #020005);
+      color: #d9bfff;
+    }
+    ::selection {
+      background: #7f00ff;
+      color: white;
+    }
+    .neon-glow {
+      box-shadow: 0 0 10px rgba(143, 0, 255, 0.4), 0 0 25px rgba(143, 0, 255, 0.2);
+    }
+    .neon-text {
+      text-shadow: 0 0 10px rgba(143, 0, 255, 0.6), 0 0 20px rgba(143, 0, 255, 0.3);
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen">
-  <header class="flex items-center justify-between p-4 bg-gray-800 shadow-lg sticky top-0 z-10">
-    <h1 class="text-2xl font-bold">КиноТрендОбыкновенный</h1>
-    <div class="flex gap-3">
-      <select id="genreSelect" class="bg-gray-700 px-3 py-2 rounded-lg">
+<body class="min-h-screen text-purple-100">
+  <header class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 p-4 bg-gradient-to-r from-black via-[#1a0033] to-black shadow-lg sticky top-0 z-10 border-b border-purple-900">
+    <h1 class="text-3xl font-extrabold text-purple-400 tracking-wide neon-text">🎬 КиноТрендОбыкновенный</h1>
+
+    <div class="flex flex-wrap gap-3 items-center justify-between w-full sm:w-auto">
+      <input
+        id="searchInput"
+        type="text"
+        placeholder="🔍 Поиск фильмов..."
+        class="bg-black/70 border border-purple-900 text-purple-300 placeholder-purple-600 px-3 py-2 rounded-lg w-full sm:w-60 focus:outline-none focus:ring-2 focus:ring-purple-700 transition"
+      />
+
+      <select id="genreSelect" class="bg-black/70 border border-purple-900 text-purple-300 px-3 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-700 transition">
         <option value="comedy">Комедии</option>
         <option value="drama">Драмы</option>
         <option value="animation">Мультфильмы</option>
         <option value="horror">Ужасы</option>
       </select>
-      <button id="favoritesToggle" class="bg-indigo-600 hover:bg-indigo-700 px-4 py-2 rounded-lg">
+
+      <button id="favoritesToggle" class="bg-purple-800 hover:bg-purple-900 neon-glow px-4 py-2 rounded-lg font-semibold text-white transition">
         Показать избранное
       </button>
     </div>
   </header>
 
-  <main class="p-4">
+  <main class="p-6">
     <div id="moviesContainer" class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
     <div class="flex justify-center mt-6">
-      <button id="loadMoreBtn" class="bg-indigo-600 hover:bg-indigo-700 px-6 py-2 rounded-lg hidden">
+      <button id="loadMoreBtn" class="bg-purple-800 hover:bg-purple-900 neon-glow px-6 py-2 rounded-lg hidden text-white transition">
         Показать больше
       </button>
     </div>
   </main>
 
+  <!-- Модалка -->
   <div
     id="movieModal"
     class="fixed inset-0 bg-black bg-opacity-0 opacity-0 scale-95 pointer-events-none transition-all duration-300 flex items-center justify-center z-20"
   >
-    <div class="bg-gray-800 rounded-xl p-6 max-w-md w-full relative transform transition-all duration-300 scale-95 opacity-0">
-      <button id="closeModal" class="absolute top-3 right-3 text-gray-400 hover:text-white text-xl">✖</button>
-      <img id="modalPoster" class="rounded-lg mb-4 w-full" src="" alt="Постер фильма" />
-      <h2 id="modalTitle" class="text-2xl font-bold mb-2"></h2>
-      <p id="modalYear" class="text-gray-400 text-sm mb-3"></p>
-      <p id="modalDescription" class="text-gray-300 mb-4"></p>
-      <button id="modalFavoriteBtn" class="bg-indigo-600 hover:bg-indigo-700 w-full py-2 rounded-lg">
+    <div class="bg-black border border-purple-900 rounded-xl p-6 max-w-md w-full relative transform transition-all duration-300 scale-95 opacity-0 shadow-2xl neon-glow">
+      <button id="closeModal" class="absolute top-3 right-3 text-purple-400 hover:text-purple-200 text-xl">✖</button>
+      <img id="modalPoster" class="rounded-lg mb-4 w-full shadow-md shadow-purple-900/50" src="" alt="Постер фильма" />
+      <h2 id="modalTitle" class="text-2xl font-bold mb-2 text-purple-300 neon-text"></h2>
+      <p id="modalYear" class="text-purple-500 text-sm mb-3"></p>
+      <p id="modalDescription" class="text-purple-200 mb-4"></p>
+      <button id="modalFavoriteBtn" class="bg-purple-800 hover:bg-purple-900 neon-glow w-full py-2 rounded-lg transition font-semibold">
         Добавить в избранное
       </button>
     </div>
@@ -52,6 +78,7 @@
     const genreSelect = document.getElementById("genreSelect");
     const favoritesToggle = document.getElementById("favoritesToggle");
     const loadMoreBtn = document.getElementById("loadMoreBtn");
+    const searchInput = document.getElementById("searchInput");
 
     const modal = document.getElementById("movieModal");
     const closeModal = document.getElementById("closeModal");
@@ -75,7 +102,25 @@
         currentIndex = 0;
         renderMovies();
       } catch {
-        container.innerHTML = '<p class="text-red-400">Ошибка загрузки фильмов</p>';
+        container.innerHTML = '<p class="text-purple-400">Ошибка загрузки фильмов</p>';
+      }
+    }
+
+    async function searchMovies(query) {
+      if (!query.trim()) {
+        loadMovies(currentGenre);
+        return;
+      }
+
+      try {
+        const res = await fetch(`https://api.sampleapis.com/movies/${currentGenre}`);
+        const data = await res.json();
+        movies = data.filter(movie =>
+          movie.title.toLowerCase().includes(query.toLowerCase())
+        );
+        renderMovies();
+      } catch {
+        container.innerHTML = '<p class="text-purple-400">Ошибка поиска фильмов</p>';
       }
     }
 
@@ -86,12 +131,12 @@
       display.forEach((movie) => {
         const card = document.createElement("div");
         card.className =
-          "bg-gray-800 rounded-xl p-3 shadow-md hover:shadow-lg cursor-pointer transition-transform hover:scale-105";
+          "bg-black border border-purple-900 rounded-xl p-3 shadow-lg hover:shadow-purple-900/60 cursor-pointer transition-transform hover:scale-105";
         card.innerHTML = `
           <img src="${movie.posterURL || "https://via.placeholder.com/300x450?text=Нет+постера"}"
-               class="rounded-lg mb-3 w-full h-64 object-cover" alt="Постер">
-          <h3 class="text-lg font-semibold mb-1">${movie.title}</h3>
-          <p class="text-sm text-gray-400">${movie.year || "—"}</p>
+               class="rounded-lg mb-3 w-full h-64 object-cover shadow-md shadow-purple-900/50" alt="Постер">
+          <h3 class="text-lg font-semibold mb-1 text-purple-300">${movie.title}</h3>
+          <p class="text-sm text-purple-600">${movie.year || "—"}</p>
         `;
         card.addEventListener("click", () => openModal(movie));
         container.appendChild(card);
@@ -115,7 +160,6 @@
         : "Добавить в избранное";
       modalFavoriteBtn.onclick = () => toggleFavorite(movie);
 
-      // Плавное открытие
       modal.classList.remove("pointer-events-none");
       modal.classList.add("bg-opacity-80");
       modal.classList.replace("opacity-0", "opacity-100");
@@ -126,7 +170,6 @@
     }
 
     function closeModalAnimated() {
-      // Плавное закрытие
       modal.classList.replace("opacity-100", "opacity-0");
       modal.classList.replace("bg-opacity-80", "bg-opacity-0");
       const modalBox = modal.querySelector("div");
@@ -166,6 +209,10 @@
     loadMoreBtn.addEventListener("click", () => {
       currentIndex += perPage;
       renderMovies();
+    });
+
+    searchInput.addEventListener("input", (e) => {
+      searchMovies(e.target.value);
     });
 
     loadMovies(currentGenre);
