--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>КиноТрендОбыкновенный — Приветствие</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      background: radial-gradient(circle at center, #1a0026 0%, #0a0012 100%);
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col items-center justify-center">
-  <h1 class="text-4xl font-bold mb-4">Добро пожаловать в КиноТрендОбыкновенный. Сокращенно КТО?</h1>
-  <p class="text-gray-400 mb-6">Здесь ты увидишь культовые фильмы, которые должен знать каждый. Особенность этого проекта в том, что вы сможете находить интерсные фильмы совершенно ничего о них не зная. А после этого сходить на них в кинотеатр. Исследуй кино-мир!</p>
-  <a href="catalog.html" class="px-6 py-3 bg-indigo-600 hover:bg-indigo-700 rounded-lg text-lg font-semibold">Перейти</a>
-  <footer class="absolute bottom-4 text-sm text-gray-500">Сделано в подвале ❤️</footer>
+<body class="text-purple-100 min-h-screen flex flex-col items-center justify-center">
+  <h1 class="text-4xl font-bold mb-4 text-purple-300 drop-shadow-[0_0_10px_#6d28d9]">
+    Добро пожаловать в <span class="text-purple-400">КиноТрендОбыкновенный</span><br>Сокращенно — <span class="text-purple-500 font-extrabold">КТО?</span>
+  </h1>
+
+  <p class="text-purple-300 max-w-2xl text-center mb-6 leading-relaxed">
+    Здесь ты найдёшь культовые фильмы, которые должен знать каждый.  
+    Особенность этого проекта — ты можешь открывать интересные картины, ничего о них не зная.  
+    Исследуй кино-мир и, возможно, откроешь своего нового любимого героя 🎬
+  </p>
+
+  <a href="catalog.html"
+     class="px-8 py-3 bg-purple-700 hover:bg-purple-800 rounded-lg text-lg font-semibold shadow-lg shadow-purple-900 transition-all hover:scale-105">
+     Перейти
+  </a>
+
+  <footer class="absolute bottom-4 text-sm text-purple-600">
+    Сделано в подвале ❤️
+  </footer>
 </body>
 </html>
