--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
     }
   </style>
 </head>
-<body class="text-purple-100 min-h-screen flex flex-col items-center justify-center">
-  <h1 class="text-4xl font-bold mb-4 text-purple-300 drop-shadow-[0_0_10px_#6d28d9]">
-    Добро пожаловать в <span class="text-purple-400">КиноТрендОбыкновенный</span><br>Сокращенно — <span class="text-purple-500 font-extrabold">КТО?</span>
-  </h1>
+<body class="text-purple-100 min-h-screen flex flex-col items-center justify-center px-4 text-center">
+  <div class="max-w-3xl w-full flex flex-col items-center">
+    <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-6 text-purple-300 drop-shadow-[0_0_10px_#6d28d9] leading-snug">
+      Добро пожаловать в <span class="text-purple-400">КиноТрендОбыкновенный</span><br class="hidden sm:block">
+      Сокращенно — <span class="text-purple-500 font-extrabold">КТО?</span>
+    </h1>
 
-  <p class="text-purple-300 max-w-2xl text-center mb-6 leading-relaxed">
-    Здесь ты найдёшь культовые фильмы, которые должен знать каждый.  
-    Особенность этого проекта — ты можешь открывать интересные картины, ничего о них не зная.  
-    Исследуй кино-мир и, возможно, откроешь своего нового любимого героя 🎬
-  </p>
+    <p class="text-purple-300 text-base sm:text-lg md:text-xl mb-8 leading-relaxed">
+      Здесь ты найдёшь культовые фильмы, которые должен знать каждый.  
+      Особенность этого проекта — ты можешь открывать интересные картины, ничего о них не зная.  
+      Исследуй кино-мир и, возможно, откроешь своего нового любимого героя 🎬
+    </p>
 
-  <a href="catalog.html"
-     class="px-8 py-3 bg-purple-700 hover:bg-purple-800 rounded-lg text-lg font-semibold shadow-lg shadow-purple-900 transition-all hover:scale-105">
-     Перейти
-  </a>
+    <a href="catalog.html"
+       class="w-full sm:w-auto px-8 py-3 bg-purple-700 hover:bg-purple-800 rounded-lg text-lg font-semibold shadow-lg shadow-purple-900 transition-all hover:scale-105">
+       Перейти
+    </a>
+  </div>
 
-  <footer class="absolute bottom-4 text-sm text-purple-600">
+  <footer class="absolute bottom-4 text-xs sm:text-sm text-purple-600">
     Сделано в подвале ❤️
   </footer>
 </body>
