--- a/catalog.html
+++ b/catalog.html
@@ -1,80 +1,106 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>КиноТрендОбыкновенный</title>
+  <title>КиноТрендОткрытие</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     body {
-      background: radial-gradient(circle at 20% 20%, #0b0017, #020005);
-      color: #d9bfff;
+      background: radial-gradient(circle at top, #1a1a1a, #0b0b0f);
+      color: #e5e5e5;
     }
+
     ::selection {
-      background: #7f00ff;
+      background: #e50914;
       color: white;
-    }
-    .neon-glow {
-      box-shadow: 0 0 10px rgba(143, 0, 255, 0.4), 0 0 25px rgba(143, 0, 255, 0.2);
-    }
-    .neon-text {
-      text-shadow: 0 0 10px rgba(143, 0, 255, 0.6), 0 0 20px rgba(143, 0, 255, 0.3);
     }
   </style>
 </head>
-<body class="min-h-screen text-purple-100">
-  <header class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 p-4 bg-gradient-to-r from-black via-[#1a0033] to-black shadow-lg sticky top-0 z-10 border-b border-purple-900">
-    <h1 class="text-3xl font-extrabold text-purple-400 tracking-wide neon-text">
-      <a href="index.html" class="hover:underline cursor-pointer">🎬 КиноТрендОбыкновенный</a>
+
+<body class="min-h-screen">
+
+  <!-- HEADER -->
+  <header class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 p-4 bg-black/80 backdrop-blur-md sticky top-0 z-10 border-b border-white/10">
+    <h1 class="text-2xl font-bold tracking-wide text-white">
+      <a href="index.html">🎬 КиноТрендОткрытие</a>
     </h1>
 
-    <div class="flex flex-wrap gap-3 items-center justify-between w-full sm:w-auto">
+    <div class="flex flex-wrap gap-3 items-center w-full sm:w-auto">
       <input
         id="searchInput"
         type="text"
-        placeholder="🔍 Поиск фильмов..."
-        class="bg-black/70 border border-purple-900 text-purple-300 placeholder-purple-600 px-3 py-2 rounded-lg w-full sm:w-60 focus:outline-none focus:ring-2 focus:ring-purple-700 transition"
+        placeholder="Поиск фильмов..."
+        class="bg-[#141414] border border-white/10 text-white placeholder-gray-500 px-3 py-2 rounded-md w-full sm:w-60 focus:outline-none focus:ring-2 focus:ring-red-600 transition"
       />
 
-      <select id="genreSelect" class="bg-black/70 border border-purple-900 text-purple-300 px-3 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-700 transition">
-        <option value="comedy">Комедии</option>
-        <option value="drama">Драмы</option>
-        <option value="animation">Мультфильмы</option>
-        <option value="horror">Ужасы</option>
+      <select id="genreSelect"
+        class="bg-[#141414] border border-white/10 text-white px-3 py-2 rounded-md focus:outline-none focus:ring-2 focus:ring-red-600 transition">
+        <option value="all">Все</option>
+<option value="Drama">Драма</option>
+<option value="Comedy">Комедия</option>
+<option value="Crime">Криминал</option>
+<option value="Thriller">Триллер</option>
+<option value="Fantasy">Фэнтези</option>
+<option value="Horror">Ужасы</option>
       </select>
 
-      <button id="favoritesToggle" class="bg-purple-800 hover:bg-purple-900 neon-glow px-4 py-2 rounded-lg font-semibold text-white transition">
-        Показать избранное
+      <button id="favoritesToggle"
+        class="bg-red-600 hover:bg-red-700 px-4 py-2 rounded-md font-semibold transition">
+        Избранное
       </button>
     </div>
   </header>
 
+  <!-- MAIN -->
   <main class="p-6">
-    <div id="moviesContainer" class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
-    <div class="flex justify-center mt-6">
-      <button id="loadMoreBtn" class="bg-purple-800 hover:bg-purple-900 neon-glow px-6 py-2 rounded-lg hidden text-white transition">
+    <div id="moviesContainer"
+      class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    </div>
+
+    <div class="flex justify-center mt-8">
+      <button id="loadMoreBtn"
+        class="bg-red-600 hover:bg-red-700 px-6 py-2 rounded-md hidden font-semibold transition">
         Показать больше
       </button>
     </div>
   </main>
 
-  <!-- Модалка -->
-  <div
-    id="movieModal"
-    class="fixed inset-0 bg-black bg-opacity-0 opacity-0 scale-95 pointer-events-none transition-all duration-300 flex items-center justify-center z-20"
-  >
-    <div class="bg-black border border-purple-900 rounded-xl p-6 max-w-md w-full relative transform transition-all duration-300 scale-95 opacity-0 shadow-2xl neon-glow">
-      <button id="closeModal" class="absolute top-3 right-3 text-purple-400 hover:text-purple-200 text-xl">✖</button>
-      <img id="modalPoster" class="rounded-lg mb-4 w-full shadow-md shadow-purple-900/50" src="" alt="Постер фильма" />
-      <h2 id="modalTitle" class="text-2xl font-bold mb-2 text-purple-300 neon-text"></h2>
-      <p id="modalYear" class="text-purple-500 text-sm mb-3"></p>
-      <p id="modalDescription" class="text-purple-200 mb-4"></p>
-      <button id="modalFavoriteBtn" class="bg-purple-800 hover:bg-purple-900 neon-glow w-full py-2 rounded-lg transition font-semibold">
-        Добавить в избранное
-      </button>
+  <!-- MODAL -->
+  <div id="movieModal"
+    class="fixed inset-0 bg-black/80 opacity-0 scale-95 pointer-events-none transition-all duration-300 flex items-center justify-center z-20 backdrop-blur-md">
+
+    <div
+      class="bg-[#141414] rounded-xl p-6 max-w-3xl w-full relative transform transition-all duration-300 scale-95 opacity-0 shadow-2xl">
+
+      <button id="closeModal"
+        class="absolute top-3 right-3 text-gray-400 hover:text-white text-xl">✖</button>
+
+      <div class="flex flex-col md:flex-row gap-6">
+        <img id="modalPoster"
+          class="rounded-lg w-full md:w-64 h-96 object-cover shadow-lg"
+          src="" alt="Постер">
+
+        <div class="flex flex-col justify-between">
+          <div>
+            <h2 id="modalTitle" class="text-3xl font-bold mb-2"></h2>
+            <p id="modalYear" class="text-gray-400 mb-4"></p>
+            <p id="modalDescription" class="text-gray-300"></p>
+          </div>
+
+          <div class="mt-6 flex gap-3">
+            <button id="modalFavoriteBtn"
+              class="bg-[#1f1f1f] hover:bg-[#2a2a2a] px-4 py-2 rounded-md transition">
+              В избранное
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
+  <!-- SCRIPT -->
   <script>
     const container = document.getElementById("moviesContainer");
     const genreSelect = document.getElementById("genreSelect");
@@ -89,153 +115,182 @@
     const modalYear = document.getElementById("modalYear");
     const modalDescription = document.getElementById("modalDescription");
     const modalFavoriteBtn = document.getElementById("modalFavoriteBtn");
-
+    
     let movies = [];
     let favorites = JSON.parse(localStorage.getItem("favorites")) || [];
     let showingFavorites = false;
-    let currentGenre = "comedy";
+    let currentGenre = "all";
+    let searchQuery = "";
     let currentIndex = 0;
     const perPage = 12;
 
-    async function loadMovies(genre) {
-      try {
-        const res = await fetch(`https://api.sampleapis.com/movies/${genre}`);
+    async function loadMovies() {
+        const res = await fetch("https://api.tvmaze.com/shows");
         movies = await res.json();
         currentIndex = 0;
         renderMovies();
-      } catch {
-        container.innerHTML = '<p class="text-purple-400">Ошибка загрузки фильмов</p>';
-      }
-    }
-
-    async function searchMovies(query) {
-      if (!query.trim()) {
-        loadMovies(currentGenre);
-        return;
-      }
-
-      try {
-        const res = await fetch(`https://api.sampleapis.com/movies/${currentGenre}`);
-        const data = await res.json();
-        movies = data.filter(movie =>
-          movie.title.toLowerCase().includes(query.toLowerCase())
-        );
-        renderMovies();
-      } catch {
-        container.innerHTML = '<p class="text-purple-400">Ошибка поиска фильмов</p>';
-      }
-    }
+}
 
     function renderMovies() {
-      container.innerHTML = "";
+        
+  container.innerHTML = "";
 
-      let list = showingFavorites
-        ? favorites.filter(f => f.genre === currentGenre)
-        : movies;
+  const baseList = showingFavorites ? favorites : movies;
 
-      const display = list.slice(0, currentIndex + perPage);
-      display.forEach((movie) => {
-        const card = document.createElement("div");
-        card.className =
-          "bg-black border border-purple-900 rounded-xl p-3 shadow-lg hover:shadow-purple-900/60 cursor-pointer transition-transform hover:scale-105";
-        card.innerHTML = `
-          <img src="${movie.posterURL || "https://via.placeholder.com/300x450?text=Нет+постера"}"
-               class="rounded-lg mb-3 w-full h-64 object-cover shadow-md shadow-purple-900/50" alt="Постер">
-          <h3 class="text-lg font-semibold mb-1 text-purple-300">${movie.title}</h3>
-          <p class="text-sm text-purple-600">${movie.year || "—"}</p>
-        `;
-        card.addEventListener("click", () => openModal(movie));
-        container.appendChild(card);
-      });
+const source =
+  currentGenre === "all"
+    ? baseList
+    : baseList.filter(show =>
+        show.genres?.includes(currentGenre)
+      );
+const finalList = searchQuery
+  ? source.filter(show =>
+      show.name.toLowerCase().includes(searchQuery)
+    )
+  : source;
+  if (!source.length) {
+    container.innerHTML = `
+      <p class="text-gray-400 col-span-full text-center mt-10">
+        ${showingFavorites ? "Избранное пусто 😢" : "Ничего не найдено"}
+      </p>
+    `;
+    loadMoreBtn.classList.add("hidden");
+    return;
+  }
 
-      if (currentIndex + perPage < list.length) {
-        loadMoreBtn.classList.remove("hidden");
-      } else {
-        loadMoreBtn.classList.add("hidden");
-      }
-    }
+  const display = finalList.slice(0, currentIndex + perPage);
 
-    function openModal(movie) {
-      modalPoster.src =
-        movie.posterURL || "https://via.placeholder.com/300x450?text=Нет+постера";
-      modalTitle.textContent = movie.title;
-      modalYear.textContent = movie.year ? `Год: ${movie.year}` : "";
-      modalDescription.textContent =
-        movie.description || "Описание отсутствует.";
-      modalFavoriteBtn.textContent = favorites.find((f) => f.title === movie.title)
-        ? "Удалить из избранного"
-        : "Добавить в избранное";
-      modalFavoriteBtn.onclick = () => toggleFavorite(movie);
+  display.forEach(show => {
+    const poster =
+      show.image?.medium ||
+      "https://via.placeholder.com/300x450?text=No+Image";
 
-      modal.classList.remove("pointer-events-none");
-      modal.classList.add("bg-opacity-80");
-      modal.classList.replace("opacity-0", "opacity-100");
-      modal.classList.replace("scale-95", "scale-100");
-      const modalBox = modal.querySelector("div");
-      modalBox.classList.replace("scale-95", "scale-100");
-      modalBox.classList.replace("opacity-0", "opacity-100");
-    }
+    const card = document.createElement("div");
+    card.className =
+      "bg-[#141414] rounded-lg overflow-hidden cursor-pointer transition-transform hover:scale-105";
+
+    card.innerHTML = `
+      <img src="${poster}" class="w-full h-72 object-cover">
+      <div class="p-3">
+        <h3 class="font-semibold text-white">${show.name}</h3>
+        <p class="text-gray-400 text-sm">
+          ⭐ ${show.rating?.average ?? "—"}
+        </p>
+      </div>
+    `;
+
+    card.onclick = () => openModal(show);
+    container.appendChild(card);
+  });
+
+  loadMoreBtn.classList.toggle(
+    "hidden",
+    currentIndex + perPage >= finalList.length
+  );
+}
+    function renderFilteredMovies(list) {
+        container.innerHTML = "";
+        currentIndex = 0;
+        list.slice(0, perPage).forEach(movie => {
+            const card = document.createElement("div");
+            card.className = "bg-[#141414] rounded-lg overflow-hidden cursor-pointer hover:scale-105 transition";
+
+    card.innerHTML = `
+    <div class="relative">
+        <img src="https://via.placeholder.com/300x450?text=No+Poster"
+        class="w-full h-72 object-cover">
+        <div class="p-3">
+            <h3 class="font-semibold">${movie.title}</h3>
+            <p class="text-gray-400 text-sm">${movie.release_date}</p>
+        </div>
+    </div>`;
+    card.onclick = () => openModal(movie);
+    container.appendChild(card);});
+    loadMoreBtn.classList.add("hidden");
+}
+    function toggleFavorite(show) {
+  const index = favorites.findIndex(f => f.id === show.id);
+
+  if (index > -1) {
+    favorites.splice(index, 1);
+  } else {
+    favorites.push(show);
+  }
+
+  localStorage.setItem("favorites", JSON.stringify(favorites));
+
+  modalFavoriteBtn.textContent =
+    index > -1 ? "В избранное" : "Удалить из избранного";
+
+  if (showingFavorites) renderMovies();
+}
+
+    function openModal(show) {
+  modalPoster.src =
+    show.image?.original ||
+    "https://via.placeholder.com/300x450?text=No+Image";
+
+  modalTitle.textContent = show.name;
+  modalYear.textContent = show.premiered
+    ? `Премьера: ${show.premiered}`
+    : "";
+
+  modalDescription.innerHTML =
+    show.summary
+      ? show.summary.replace(/<[^>]+>/g, "")
+      : "Описание отсутствует.";
+
+  modal.classList.remove("pointer-events-none", "opacity-0", "scale-95");
+  modal.classList.add("opacity-100", "scale-100");
+
+  const box = modal.querySelector("div");
+  box.classList.remove("opacity-0", "scale-95");
+  box.classList.add("opacity-100", "scale-100");
+  modalFavoriteBtn.textContent =
+  favorites.some(f => f.id === show.id)
+    ? "Удалить из избранного"
+    : "В избранное";
+
+modalFavoriteBtn.onclick = () => toggleFavorite(show);
+}
 
     function closeModalAnimated() {
-      modal.classList.replace("opacity-100", "opacity-0");
-      modal.classList.replace("bg-opacity-80", "bg-opacity-0");
-      const modalBox = modal.querySelector("div");
-      modalBox.classList.replace("opacity-100", "opacity-0");
-      modalBox.classList.replace("scale-100", "scale-95");
-      setTimeout(() => {
-        modal.classList.add("pointer-events-none");
-      }, 300);
-    }
+  modal.classList.remove("opacity-100", "scale-100");
+  modal.classList.add("opacity-0", "scale-95");
 
-    function toggleFavorite(movie) {
-      const index = favorites.findIndex((f) => f.title === movie.title);
-      if (index > -1) {
-        favorites.splice(index, 1);
-      } else {
-        const movieWithGenre = { ...movie, genre: currentGenre };
-        favorites.push(movieWithGenre);
-      }
-      localStorage.setItem("favorites", JSON.stringify(favorites));
-      modalFavoriteBtn.textContent =
-        index > -1 ? "Добавить в избранное" : "Удалить из избранного";
-      if (showingFavorites) renderMovies();
-    }
+  setTimeout(() => {
+    modal.classList.add("pointer-events-none");
+  }, 300);
+}
 
-    closeModal.addEventListener("click", closeModalAnimated);
+    closeModal.onclick = closeModalAnimated;
 
-    favoritesToggle.addEventListener("click", () => {
-      showingFavorites = !showingFavorites;
-      favoritesToggle.textContent = showingFavorites
-        ? "Вернуться к каталогу"
-        : "Показать избранное";
-      renderMovies();
-    });
+    favoritesToggle.onclick = () => {
+  showingFavorites = !showingFavorites;
+  favoritesToggle.textContent =
+    showingFavorites ? "Каталог" : "Избранное";
+  currentIndex = 0;
+  renderMovies();
+};
 
-    genreSelect.addEventListener("change", (e) => {
-      currentGenre = e.target.value;
-      localStorage.setItem("selectedGenre", currentGenre);
-      showingFavorites = false;
-      favoritesToggle.textContent = "Показать избранное";
-      loadMovies(currentGenre);
-    });
+    genreSelect.onchange = e => {
+  currentGenre = e.target.value;
+  currentIndex = 0;
+  renderMovies();
+};
 
-    loadMoreBtn.addEventListener("click", () => {
+    loadMoreBtn.onclick = () => {
       currentIndex += perPage;
       renderMovies();
-    });
+    };
 
-    searchInput.addEventListener("input", (e) => {
-      searchMovies(e.target.value);
-    });
-
-    // Загружаем сохранённый жанр, если есть
-    const savedGenre = localStorage.getItem("selectedGenre");
-    if (savedGenre && genreSelect.querySelector(`option[value="${savedGenre}"]`)) {
-      currentGenre = savedGenre;
-      genreSelect.value = savedGenre;
-    }
-
+    searchInput.oninput = e => {
+  searchQuery = e.target.value.toLowerCase();
+  currentIndex = 0;
+  renderMovies();
+};
     loadMovies(currentGenre);
   </script>
+
 </body>
 </html>
